# using_c_ssl

./: CMakeLists.txt  main.c
client/: CMakeLists.txt  main.c
common/: CMakeLists.txt  common.h
common/src/: common.c
helpers/: create_client_ca_signed_with_root_ca.sh  create_dh_files.sh  create_root_pem.sh  create_server_ca_signed_with_root_ca.sh  create_server_ca_signed_with_server_ca.sh  openssl.cnf
server/: CMakeLists.txt  main.c
